Improve thread safety of EPICS ExternalSystem (ASKAPSUP-86). Fix problem with asynchronous polled points (MONICA-29). Drop requirement for 1.5 compatibility.